public.js : removed course/workshop button animations. They're now fixed on the left and right when the applications are open. public.scss: removed background image on mobile due to display problems; changed left and right position of course/workshop buttons to 0; added background color; index.html: changed the rendering position of course/workshop forms on mobile devices.

--- a/app/assets/stylesheets/public.scss
+++ b/app/assets/stylesheets/public.scss
@@ -32,6 +32,7 @@ html {
 }
 body {
   background-image: image-url("logo-foto2-medium.jpg");
+  background-color: #181818;
   background-size: cover;
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -134,11 +135,11 @@ body {
 }*/
 
 @media (max-width: 991px){
-  
+
   .body{
-    background-image: image-url("logo-foto2-medium-mobile.jpg");
+    background-image: none;
   }
-  
+
   #PrijaveOuter{
     background: linear-gradient(180deg, #d0d0d0 50%, #ff6600 50%);
     color: #181818;
@@ -258,7 +259,7 @@ body {
 #TecajModalButton{
 
   position: fixed;
-  left: -100vw;
+  left: 0;
   top: 25%;
   height: 50%;
   z-index: 1000;
@@ -268,7 +269,7 @@ body {
 #RadionicaModalButton{
 
   position: fixed;
-  right: -100vw;
+  right: 0;
   top: 25%;
   height: 50%;
   z-index: 1000;
